2019-10-16  Added: OSDMenuItemPassDrawing() to allow a user-controlled item drawing
            Added: TMSOSDMenu PassDrawing demo
            Added: Cursor type CT_Hide to hide the cursor
            Added: OSDMenuButtonModifyText() to allow label replacement without graphic position change
            Modified: Release date
2019-10-18  Fixed: Potential out-of-bounds access in OSDMenuButtonAdd()
            Fixed: Potential null pointer usage in OSDMenuMessageBoxButtonAdd()
            Fixed: OSDMenuDestroyNoOSDUpdate() and OSDMenuPop() left some memory unreleased
            Fixed: The callback function was common to all menus (not menu-specific) and was not saved and restored with OSDMenuPush()/OSDMenuPop()
            Modified: Release date
2019-11-22  Added: OSDMenuItemFindID()
            Added: OSDMenuItemGetNameColor()
            Added: OSDMenuItemGetTextColor()
            Added: OSDMenuFindNextSelectableEntry() and OSDMenuFindPreviousSelectableEntry() made public (i.e. part of the API)
            Modified: Increase the maximum length of keyboard button texts from 19 to 22
            Modified: Increase the width for keyboard buttons and texts by 2 px (so as not to waste space)
            Modified: Enable the edited text to spread wider, so that there is the same spacing to the left and right
            Fixed: Potential string overflow (OSDMenuKeyboard_StringVar)
            Modified: Don't return a space character for empty keys
            Fixed: Reset KeyPadMode to its default when initializing the keyboard
            Added: OSDMenuKeyboard_ChangeKeypad() to change or suppress keypads (except Standard and CAPS)
            Added: OSDMenuKeyboard_SetKeypadMode() to change the default starting keypad mode
            Fixed: Align keyboard title horizontally and vertically centered (2 px to the left and 3 px up)
            Fixed: Align key descriptions centered (1 px to the right)