@@ -110,26 +110,26 @@ void OSDMenuKeyboard_Draw(void)
   //..., falls der Text bereits links hinausgeschoben ist
   if(OSDMenuKeyboard_TextStartPosition > 0)
   {
-    FMUC_PutStringAA(OSDMenuKeyboard_rgn, x, 282, MAXX, "...", COLOR_Grey19, 0, &KeyboardFont_14, TRUE, ALIGN_LEFT, AntiAliasFactor);
+    FMUC_PutStringAA(OSDMenuKeyboard_rgn, x, 280, MAXX, "...", COLOR_Grey19, 0, &KeyboardFont_14, TRUE, ALIGN_LEFT, AntiAliasFactor);
     x += FMUC_GetStringWidth("...", &KeyboardFont_14);
   }
 
   if(OSDMenuKeyboard_CursorPosition == 0)
   {
     //Cursor malen
-    TAP_Osd_PutGd(OSDMenuKeyboard_rgn, 6, 286, &_TextCursor14_Gd, TRUE);
+    TAP_Osd_PutGd(OSDMenuKeyboard_rgn, 6, 284, &_TextCursor14_Gd, TRUE);
 
     //Ganzen Text malen
-    FMUC_PutStringAA(OSDMenuKeyboard_rgn, x + _TextCursor14_Gd.width, 282, MAXX, OSDMenuKeyboard_StringVar, COLOR_Grey19, 0, &KeyboardFont_14, TRUE, ALIGN_LEFT, AntiAliasFactor);
+    FMUC_PutStringAA(OSDMenuKeyboard_rgn, x + _TextCursor14_Gd.width, 280, MAXX, OSDMenuKeyboard_StringVar, COLOR_Grey19, 0, &KeyboardFont_14, TRUE, ALIGN_LEFT, AntiAliasFactor);
   }
   else if(OSDMenuKeyboard_CursorPosition == (int)strlen(OSDMenuKeyboard_StringVar))
   {
     //Ganzen Text malen
-    FMUC_PutStringAA(OSDMenuKeyboard_rgn, x, 282, MAXX, StringVarStart, COLOR_Grey19, 0, &KeyboardFont_14, TRUE, ALIGN_LEFT, AntiAliasFactor);
+    FMUC_PutStringAA(OSDMenuKeyboard_rgn, x, 280, MAXX, StringVarStart, COLOR_Grey19, 0, &KeyboardFont_14, TRUE, ALIGN_LEFT, AntiAliasFactor);
 
     //Cursor malen
     tw = FMUC_GetStringWidth(StringVarStart, &KeyboardFont_14);
-    TAP_Osd_PutGd(OSDMenuKeyboard_rgn, x + tw, 286, &_TextCursor14_Gd, TRUE);
+    TAP_Osd_PutGd(OSDMenuKeyboard_rgn, x + tw, 284, &_TextCursor14_Gd, TRUE);
   }
   else
   {
@@ -137,16 +137,16 @@ void OSDMenuKeyboard_Draw(void)
     pCharAtCursor = GetUCPos(OSDMenuKeyboard_StringVar, OSDMenuKeyboard_CursorPosition);
     CharAtCursor = *pCharAtCursor;
     *pCharAtCursor = '\0';
-    FMUC_PutStringAA(OSDMenuKeyboard_rgn, x, 282, MAXX, StringVarStart, COLOR_Grey19, 0, &KeyboardFont_14, TRUE, ALIGN_LEFT, AntiAliasFactor);
+    FMUC_PutStringAA(OSDMenuKeyboard_rgn, x, 280, MAXX, StringVarStart, COLOR_Grey19, 0, &KeyboardFont_14, TRUE, ALIGN_LEFT, AntiAliasFactor);
 
     //Cursor malen
     x += FMUC_GetStringWidth(StringVarStart, &KeyboardFont_14);
-    TAP_Osd_PutGd(OSDMenuKeyboard_rgn, x, 286, &_TextCursor14_Gd, TRUE);
+    TAP_Osd_PutGd(OSDMenuKeyboard_rgn, x, 284, &_TextCursor14_Gd, TRUE);
     x += _TextCursor14_Gd.width;
 
     //Zweiten Teil des Textes malen
     *pCharAtCursor = CharAtCursor;
-    FMUC_PutStringAA(OSDMenuKeyboard_rgn, x, 282, MAXX, pCharAtCursor, COLOR_Grey19, 0, &KeyboardFont_14, TRUE, ALIGN_LEFT, AntiAliasFactor);
+    FMUC_PutStringAA(OSDMenuKeyboard_rgn, x, 280, MAXX, pCharAtCursor, COLOR_Grey19, 0, &KeyboardFont_14, TRUE, ALIGN_LEFT, AntiAliasFactor);
   }
 
   //Legende
