@@ -1133,3 +1133,4 @@ The following functions accept any form a path. The INI and language INI functio
             Added: OSDMenuKeyboard_SetKeypadMode() to change the default starting keypad mode
             Fixed: Align keyboard title horizontally and vertically centered (2 px to the left and 3 px up)
             Fixed: Align key descriptions centered (1 px to the right)
+            Fixed: Align keyboard text and cursor centered (2 px up)
